examples/kubernetes/003-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-demo
  namespace: cluster-demo
spec:
  selector:
    app: cluster-demo
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
