examples/kubernetes/004-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cluster-demo
spec:
  backend:
    serviceName: cluster-demo
    servicePort: 80
